# isThereAnyQuant

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  build.gradle.kts  config.example.yaml  deploy.sh  gradle.properties  schedule_task.json  script_protocol.json  settings.gradle.kts
.kimi/: AGENTS.md
agent/: README.md  build.gradle.kts  install-zed-acp.sh  run-interactive.sh
agent-entry/: build.gradle.kts
backtest/: build.gradle.kts
cli/: build.gradle.kts
compose-app/: build.gradle.kts  version.properties
database/: build.gradle.kts
docs/: adaptive-layout-migration-plan-c.html  adaptive-layout-migration-status.md  market-sentiment-original-algorithm.md  open-source-private-config.md  sentiment-next-day-formula.html  strategy.py
global/: build.gradle.kts
gradle/: libs.versions.toml
ksp/: build.gradle.kts
ktor-server/: Dockerfile  build.gradle.kts
model/: build.gradle.kts
network/: build.gradle.kts
py_backtest/: backingtest.py  backtest.py  context.py  ctx.py  log.py  looper.py  script.py  socket_manager.py
quant/: .gitignore  build.gradle.kts  gradle.properties  local.properties  script_protocol.json  script_protocol.yml  settings.gradle.kts
research/: 01-research-methodology.md  02-research-execution-handbook.md
scripts/: build-ios-ipa.sh  (+3 more)
strategy-server/research/pytorch/: pyproject.toml
strategy-server/research/pytorch/src/quant_research_training/: __init__.py  crash_transformer.py  profit_prediction_7pct.py  profit_prediction_film.py  profit_prediction_v2_infer.py  profit_prediction_v3_infer.py
(+1251 files in other folders)
