[project]
name = "quant-research-pytorch"
version = "0.1.0"
description = "Managed PyTorch training tools for Quant research pipelines"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "torch>=2.3.0",
]

[project.scripts]
quant-train-crash-transformer = "quant_research_training.crash_transformer:main"
quant-train-profit-prediction = "quant_research_training.profit_prediction_7pct:main"
quant-infer-film = "quant_research_training.profit_prediction_film:main"
quant-infer-v2 = "quant_research_training.profit_prediction_v2_infer:main"
quant-infer-v3 = "quant_research_training.profit_prediction_v3_infer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_research_training"]
